[ACS-8450] Fixed alignment issue

--- a/projects/aca-content/folder-rules/src/rule-details/rule-details.ui-component.scss
+++ b/projects/aca-content/folder-rules/src/rule-details/rule-details.ui-component.scss
@@ -34,7 +34,7 @@
       gap: 8px;
 
       #{$mat-floating-label}#{$mat-floating-label-above} {
-        transform: translateY(-122%) scale(1);
+        transform: translateY(-20%) scale(1);
       }
 
       & > label,
